NetBSD Problem Report #42982

From yamt@NetBSD.org  Tue Mar 16 02:59:40 2010
Return-Path: <yamt@NetBSD.org>
Received: by www.NetBSD.org (Postfix, from userid 1270)
	id 72A5163B11D; Tue, 16 Mar 2010 02:59:40 +0000 (UTC)
Message-Id: <20100316025940.72A5163B11D@www.NetBSD.org>
Date: Tue, 16 Mar 2010 02:59:40 +0000 (UTC)
From: yamt@NetBSD.org
Reply-To: yamt@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: crash on detaching network interfaces like wm(4)
X-Send-Pr-Version: 3.95

>Number:         42982
>Category:       kern
>Synopsis:       crash on detaching network interfaces like wm(4)
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 16 03:00:00 +0000 2010
>Closed-Date:    Sun Dec 30 07:56:58 +0000 2012
>Last-Modified:  Sun Dec 30 07:56:58 +0000 2012
>Originator:     YAMAMOTO Takashi
>Release:        NetBSD-current
>Organization:

>Environment:


>Description:
	on detach, some drivers including wm(4) calls ether_ifdetach
	and then if_detach.
	ether_ifdetach destroys if_mowner.
	if_detach might send out packets (eg. for ipv6)
	via ether_output, which uses if_mowner, which is already stale
	at this point.
>How-To-Repeat:
	shutdown a system with MBUFTRACE and ipv6?
>Fix:


>Release-Note:

>Audit-Trail:
From: yamt@mwd.biglobe.ne.jp (YAMAMOTO Takashi)
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: kern/42982: crash on detaching network interfaces like wm(4)
Date: Wed,  3 Aug 2011 03:59:17 +0000 (UTC)

 >>Number:         42982
 >>Category:       kern
 >>Synopsis:       crash on detaching network interfaces like wm(4)

 fwiw, this problem still exists in the recent current.

 YAMAMOTO Takashi

From: "Chuck Silvers" <chs@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42982 CVS commit: src/sys/net
Date: Fri, 11 May 2012 04:05:54 +0000

 Module Name:	src
 Committed By:	chs
 Date:		Fri May 11 04:05:54 UTC 2012

 Modified Files:
 	src/sys/net: if_ethersubr.c

 Log Message:
 in ether_ifdetach(), clear if_mowner before releasing what it points to.
 fixes PR 42982.


 To generate a diff of this commit:
 cvs rdiff -u -r1.188 -r1.189 src/sys/net/if_ethersubr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Fri, 11 May 2012 06:56:00 +0000
State-Changed-Why:
chs committed a fix, does it work for you?


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42982 CVS commit: [netbsd-6] src/sys/net
Date: Fri, 18 May 2012 17:04:28 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Fri May 18 17:04:28 UTC 2012

 Modified Files:
 	src/sys/net [netbsd-6]: if_ethersubr.c

 Log Message:
 Pull up following revision(s) (requested by chs in ticket #258):
 	sys/net/if_ethersubr.c: revision 1.189
 in ether_ifdetach(), clear if_mowner before releasing what it points to.
 fixes PR 42982.


 To generate a diff of this commit:
 cvs rdiff -u -r1.188 -r1.188.8.1 src/sys/net/if_ethersubr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 30 Dec 2012 07:56:58 +0000
State-Changed-Why:
Feedback timeout.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.